# otus_cpp_allocator

./: .travis.yml  CMakeLists.txt  custom_allocator.h  custom_container.h  hard.h  main.cpp
